fixed all gap to margin

--- a/style.css
+++ b/style.css
@@ -36,18 +36,17 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    background: linear-gradient(to right, #2c5364, #203a43, #0f2027);
+    background: linear-gradient(to right, #0d052b, #08031a, #29051d);
     z-index: 1005;
     display: flex;
     flex-direction: column;
-    gap: .5rem;
     align-items: center;
     justify-content: center;
 }
 
 #svg{
-    height: 150px;
-    width: 150px;
+    height: 100px;
+    width: 100px;
     stroke: #fff;
     fill-opacity: 0;
     stroke-width: 3px;
@@ -65,8 +64,8 @@
     position: absolute;
     margin: auto;
     color: #fff;
-    font-size: .7rem;
-    letter-spacing: 12px;
+    font-size: .6rem;
+    letter-spacing: 10px;
     text-transform: uppercase;
     text-align: center;
 }
@@ -616,14 +615,12 @@ a.btn:hover::before{
     align-items: baseline;
     margin-top: 3rem;
     padding: 1rem;
-    gap: 20px;
-
 }
 
 .grid-contains .grid-column{
     display: flex;
     flex-direction: column;
-    margin: 0 0 1rem 0;
+    margin: 1.8rem;
     padding: 1rem 0 1.5rem 0;
     flex: 1 1 250px;
     border: solid .1rem var(--hover-color);
@@ -633,11 +630,13 @@ a.btn:hover::before{
 .grid-contains .grid-column .flex-contains{
     display: flex;
     flex-wrap: wrap;
-    gap: 30px;
     justify-content: center;
     align-items: center;
     margin-top: 1rem;
     padding: 1rem;
+}
+.flex-contains .flex-item{
+    margin: 1rem;
 }
 
 .flex-contains .flex-item span i{
@@ -709,19 +708,24 @@ a.btn:hover::before{
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    gap: 10px;
     width: 300px;
 }
 .techno{
     display: flex;
     flex-direction: row;
-    gap: 5px;
     margin-top: 1rem;
     border: solid 1px var(--hover-color);
     padding-left: 0.5rem;
     padding-right: 0.5rem;
     padding-top: 0.5rem;
     border-radius: 5px;
+    margin: 0.5rem;
+}
+.imgTechno{
+    margin: 0.2rem;
+}
+.technoText{
+    margin: 0.2rem;
 }
 .imgTechno img{
     width: 20px;
@@ -746,7 +750,6 @@ a.btn:hover::before{
     width: 100%;
     display: flex;
     flex-wrap: wrap;
-    gap: 5rem;
     align-items: baseline;
 }
 
@@ -754,6 +757,7 @@ a.btn:hover::before{
     flex: 1 1 50%;
     text-align: center;
     justify-content: center;
+    margin: 2rem;
 }
 
 .other-bar{
@@ -761,9 +765,34 @@ a.btn:hover::before{
 }
 
 .other-main h3{
-    margin-bottom: 2rem;
+    margin-bottom: 4rem;
     font-size: 1.6rem;
 }
+
+.other-right{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    flex: 1 1 50%;
+    align-items: center;
+    margin: 2rem;
+}
+
+.other-right .hobbies{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    width: auto;
+    height: auto;
+    flex-wrap: wrap;
+}
+.other-right .hobbies .item{
+    border: solid .1rem var(--hover-color);
+    border-radius: 1rem;
+    padding: .5rem 1.5rem .5rem 1.5rem;
+    margin: 0.6rem;
+}
+
 
 .other-left .other-bar .info{
     display: flex;
@@ -843,33 +872,6 @@ a.btn:hover::before{
         transform: translateY(0);
     }
 }
-
-
-
-.other-right{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    flex: 1 1 50%;
-    align-items: center;
-}
-
-.other-right .hobbies{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    width: auto;
-    height: auto;
-    gap: 10px;
-    flex-wrap: wrap;
-}
-.other-right .hobbies .item{
-    border: solid .1rem var(--hover-color);
-    border-radius: 1rem;
-    padding: .5rem 1.5rem .5rem 1.5rem;
-}
-
-
 
 
 .footer{
